<resources>
    <string name="app_name">Community</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="text">text</string>
    <string name="private_board">비밀게시판</string>
    <string name="context1">context1</string>
    <string name="context2">context2</string>
    <string name="free_board">자유게시판</string>
    <string name="board_list">게시판 목록</string>
    <string name="writing">글쓰기</string>
    <string name="context">내용</string>
    <string name="email">email</string>
    <string name="nickname">닉네임</string>
</resources>