<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="9"

    >
    <TextView
        android:id="@+id/TextView_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="50sp"
        android:textColor="@android:color/holo_blue_bright"
        android:layout_weight="4"
        android:gravity="center"
    >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="50sp"
        android:textColor="#66ff00"
        android:layout_weight="2"
        android:layout_gravity="center"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="50sp"
        android:layout_weight="3"
        android:layout_gravity="right|bottom"
        android:background="@android:color/holo_orange_light"
        >
    </TextView>

</LinearLayout>